--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<p>你好，这是XTY的网站</p>
+<html>
+<head>
+    <title>XTY网站首页</title>
+    <style>
+        body {
+            background-color: lightblue;
+        }
+        h1 {
+            color: white;
+            text-align: center;
+            font-size: 50px;
+        }
+    </style>
+</head>
+<body>
+    <h1>This is XTY</h1>
+</body>
+</html>
