--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <style>
         body {
             background-color: lightblue;
+            font-family: Arial, Helvetica, sans-serif;
         }
         h1 {
             color: white;
             text-align: center;
             font-size: 50px;
         }
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+        a {
+            color: white;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
-    <h1>This is XTY</h1>
+    <h1>XTY</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Logo_Bing.svg/1200px-Logo_Bing.svg.png" alt="Bing logo">
+    <p style="text-align: center;">欢迎来到XTY的网站，这里有很多有趣的内容，你可以<a href="https://www.bing.com">点击这里</a>了解更多。</p>
 </body>
 </html>
