--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
             color: white;
             text-decoration: none;
         }
+        div {
+            background-color: white;
+            border: 5px solid black;
+            margin: 20px;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>XTY</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Logo_Bing.svg/1200px-Logo_Bing.svg.png" alt="Bing logo">
-    <p style="text-align: center;">欢迎来到XTY的网站，这里有很多有趣的内容，你可以<a href="https://www.bing.com">点击这里</a>了解更多。</p>
+    <div>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Logo_Bing.svg/1200px-Logo_Bing.svg.png" alt="Bing logo">
+        <p style="text-align: center;">欢迎来到XTY的网站，这里有很多有趣的内容，你可以<a href="https://www.bing.com">点击这里</a>了解更多。</p>
+    </div>
 </body>
 </html>
