--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <title>XTY导航网站</title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: #f0f0f0;
             font-family: Arial, Helvetica, sans-serif;
         }
         h1 {
-            color: white;
+            color: #333333;
             text-align: center;
             font-size: 50px;
         }
@@ -15,11 +15,13 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         li {
-            float: left;
             width: 25%;
+            margin: 10px;
         }
         li a {
             display: block;
@@ -27,19 +29,32 @@
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            border-radius: 10px;
         }
         li a:hover {
-            background-color: #111;
+            transform: scale(1.1);
+        }
+        .github {
+            background-color: #6e5494;
+        }
+        .code40 {
+            background-color: #ff9800;
+        }
+        .bilibili {
+            background-color: #00a1d6;
+        }
+        .ccw {
+            background-color: #4caf50;
         }
     </style>
 </head>
 <body>
     <h1>XTY</h1>
     <ul>
-        <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io">GitHub</a></li>
-        <li><a href="https://www.40code.com/#page=user&id=1603">40code</a></li>
-        <li><a href="https://space.bilibili.com/1208834427">Bilibili</a></li>
-        <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc">CCW</a></li>
+        <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
+        <li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
+        <li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
+        <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
     </ul>
 </body>
 </html>
