--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>XTY导航网站</title>
+    <title>XTY网站</title>
     <style>
         body {
             background-color: #f0f0f0;
@@ -49,12 +49,21 @@
     </style>
 </head>
 <body>
-    <h1>XTY</h1>
+    <h1>XTY的项目堆</h1>
+    <p>XTY的主页</p>
     <ul>
         <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
         <li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
         <li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
         <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
+    </ul>
+    <p>XTY的项目</p>
+    <ul>
+        <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="xdows4">GitHub</a></li>
+        <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="xdows3">GitHub</a></li>
+        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="XTYAI">GitHub</a></li>
+        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="xdows安全">GitHub</a></li>
+
     </ul>
 </body>
 </html>
