--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <p>XTY的项目</p>
     <ul>
         <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="xdows4">GitHub</a></li>
-        <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="xdows3">GitHub</a></li>
-        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="XTYAI">GitHub</a></li>
-        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="xdows安全">GitHub</a></li>
+        <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="xdows3">40code</a></li>
+        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="XTYAI">Bilibili</a></li>
+        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="xdows安全">CCW</a></li>
 
     </ul>
 </body>
