--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </ul>
     <p>XTY的项目</p>
     <ul>
-        <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="xdows4">GitHub</a></li>
-        <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="xdows3">40code</a></li>
-        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="XTYAI">Bilibili</a></li>
-        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="xdows安全">CCW</a></li>
+        <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="GitHub">xdows4</a></li>
+        <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
+        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="Bilibili">XTYAI</a></li>
+        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">xdows安全</a></li>
 
     </ul>
 </body>
