--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </style>
 </head>
 <body>
+    <div style="width: 200px; height: 200px; border: 5px solid black; background-color: bule;">
     <h1>XTY的项目堆</h1>
     <p>XTY的主页</p>
     <ul>
@@ -65,5 +66,6 @@
         <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">xdows安全</a></li>
 
     </ul>
+        </div>
 </body>
 </html>
