--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     </style>
 </head>
 <body>
-    <div style="width: 200px; height: 200px; border: 5px solid black; background-color: bule;">
+    <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
+    <div style="width: 500px; height: 5000px; border: 5px solid black; background-color: bule;">
     <h1>XTY的项目堆</h1>
     <p>XTY的主页</p>
     <ul>
