--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
     </style>
 </head>
 <body>
-<div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-  <div style="width: 200px; height: 200px; border: 5px solid black; background-color: red;">
-    
+<div style="width: 500px; height: 500px; border: 5px solid black; background-color: lightblue;">
     <h1>XTY的项目堆</h1>
     <p>XTY的主页</p>
     <ul>
@@ -68,7 +66,6 @@
         <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">xdows安全</a></li>
 
     </ul>
-</div>
 </div>
 
 </body>
