--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-    <div style="width: 500px; height: 500px; border: 5px solid black; background-color: lightblue;">
+    <div style="width: 1000px; height: 3000px; border:  background-color: lightblue;">
     <h1>XTY的项目堆</h1>
     <p>XTY的主页</p>
     <ul>
