--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-<div style="width: 500px; height: 500px; border: 0px solid black; background-color: lightblue; border-radius: 20px;">
+<div style="width: 800px; height: 1000px; border: 0px solid black; background-color: lightblue; border-radius: 20px;">8
     <h1>XTY的项目堆</h1>
     <p>XTY的主页</p>
     <ul>
