--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 <ul>
-    <li><a href="https://0.com/" class="">GitHub</a></li>
+    <li><a href="https://0.com/" class=""></a></li>
 </ul>
 <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
 <div style="width: 800px; height: 1000px; border: 0px solid black; background-color: lightblue; border-radius: 20px;">8
