--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,3 +1,10 @@
+<h4>1.43版本</h4>
+<p>主要更新：</p>
+<p>离线网页均改成在线网页</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>易语言文字显示异常（未修复）</p>
+
 <h4>1.42版本</h4>
 <p>主要更新：</p>
 <p>支持侧边按钮显示与隐藏</p>
