--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
         <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">xdows安全</a></li>
 
     </ul>
+    <p>关于xdows安全</p>
+    <ul>
+        <li><a href="/Dev/xdows安全/关于软件.html" class="GitHub">关于软件</a></li>
+        <li><a href="/Dev/xdows安全/开发人员名单.html" class="code40">开发人员名单</a></li>
+        <li><a href="/Dev/xdows安全/更新内容.html" class="Bilibili">更新内容</a></li>
+        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">下载</a></li>
+
+    </ul>
 </div>
 
 </body>
