--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <title>XTY网站</title>
     <style>
         body {
-            background-color: #f0f0f0;
+            background-image: url("https://images.unsplash.com/photo-1508615070457-7baeba4003e1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Ymx1ZSUyMGdyYWRpZW50fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
+            background-size: cover;
             font-family: Arial, Helvetica, sans-serif;
         }
         h1 {
-            color: #333333;
+            color: white;
             text-align: center;
             font-size: 50px;
+            text-shadow: 2px 2px 4px black;
         }
         ul {
             list-style-type: none;
@@ -30,6 +32,7 @@
             padding: 14px 16px;
             text-decoration: none;
             border-radius: 10px;
+            box-shadow: 2px 2px 4px black;
         }
         li a:hover {
             transform: scale(1.1);
@@ -59,29 +62,29 @@
     <li><a href="https://0.com/" class=""></a></li>
 </ul>
 <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-<div style="width: 1200px; height: 1000px; border: 0px solid black; background-color: lightblue; border-radius: 20px;">
+<div style="width: 1200px; height: 1000px; border-radius: 20px; background-image: linear-gradient(to right, lightblue, lightgreen); box-shadow: inset 0 0 20px black;">
     <h1>XTY的项目堆</h1>
-    <p>XTY的主页</p>
+    <p style="color:white; font-size:20px; text-align:center;">XTY的主页</p>
     <ul>
         <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
         <li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
         <li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
         <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
     </ul>
-    <p>XTY的项目</p>
+    <p style="color:white; font-size:20px; text-align:center;">XTY的项目</p>
     <ul>
-        <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="GitHub">xdows4</a></li>
+        <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
         <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
-        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="Bilibili">XTYAI</a></li>
-        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">xdows安全</a></li>
+        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="bilibili">XTYAI</a></li>
+        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">xdows安全</a></li>
 
     </ul>
-    <p>xdows安全</p>
+    <p style="color:white; font-size:20px; text-align:center;">xdows安全</p>
     <ul>
-        <li><a href="/Dev/xdows安全/关于软件.html" class="GitHub">关于软件</a></li>
+        <li><a href="/Dev/xdows安全/关于软件.html" class="github">关于软件</a></li>
         <li><a href="/Dev/xdows安全/开发人员名单.html" class="code40">开发人员名单</a></li>
-        <li><a href="/Dev/xdows安全/更新内容.html" class="Bilibili">更新内容</a></li>
-        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="CCW">下载</a></li>
+        <li><a href="/Dev/xdows安全/更新内容.html" class="bilibili">更新内容</a></li>
+        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">下载</a></li>
 
     </ul>
 </div>
