--- a/index.html
+++ b/index.html
@@ -1,93 +1,119 @@
 <html>
 <head>
-    <title>XTY网站</title>
-    <style>
-        body {
-            background-image: url("https://images.unsplash.com/photo-1508615070457-7baeba4003e1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Ymx1ZSUyMGdyYWRpZW50fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
-            background-size: cover;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        h1 {
-            color: white;
-            text-align: center;
-            font-size: 50px;
-            text-shadow: 2px 2px 4px black;
-        }
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        li {
-            width: 25%;
-            margin: 10px;
-        }
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            border-radius: 10px;
-            box-shadow: 2px 2px 4px black;
-        }
-        li a:hover {
-            transform: scale(1.1);
-        }
-        .github {
-            background-color: #6e5494;
-        }
-        .code40 {
-            background-color: #ff9800;
-        }
-        .bilibili {
-            background-color: #00a1d6;
-        }
-        .ccw {
-            background-color: #4caf50;
-        }
-    </style>
+<title>XTY网站</title>
+<style>
+body {
+background-color: lightblue;
+background-size: cover;
+font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+color: white;
+text-align: center;
+font-size: 50px;
+text-shadow: 2px 2px 4px black;
+}
+ul {
+list-style-type: none;
+margin: 0;
+padding: 0;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+}
+li {
+width: 25%;
+margin: 10px;
+}
+li a {
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+border-radius: 10px;
+box-shadow: 2px 2px 4px black;
+}
+li a:hover {
+transform: scale(1.1);
+}
+.github {
+background-color: #6e5494;
+}
+.code40 {
+background-color: #ff9800;
+}
+.bilibili {
+background-color: #00a1d6;
+}
+.ccw {
+background-color: #4caf50;
+}
+/* Media queries for different screen sizes and orientations */
+@media (max-width: 768px) { /* For mobile devices */
+li {
+width: 50%;
+}
+h1 {
+font-size: 30px;
+}
+p {
+font-size: 15px;
+}
+li a {
+padding: 10px 12px;
+}
+}
+@media (max-width: 480px) and (orientation: portrait) { /* For mobile devices in portrait mode */
+ul {
+flex-direction: column; /* Stack the links vertically */
+}
+li {
+width: 100%;
+}
+div {
+width: 100%; /* Make the container fit the screen */
+height: auto; /* Adjust the height according to the content */
+border-radius: 0; /* Remove the rounded corners */
+}
+}
+
+</style>
 </head>
 <body>
 <ul>
-    <li><a href="https://0.com/" class=""></a></li>
+    <li><a href="" class=""></a></li>
 </ul>
 <ul>
-    <li><a href="https://0.com/" class=""></a></li>
+    <li><a href="" class=""></a></li>
 </ul>
 <ul>
-    <li><a href="https://0.com/" class=""></a></li>
+    <li><a href="" class=""></a></li>
 </ul>
 <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-<div style="width: 1200px; height: 1000px; border-radius: 20px; background-image: linear-gradient(to right, lightblue, lightgreen); box-shadow: inset 0 0 20px black;">
-    <h1>XTY的项目堆</h1>
-    <p style="color:white; font-size:20px; text-align:center;">XTY的主页</p>
-    <ul>
-        <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
-        <li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
-        <li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
-        <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
-    </ul>
-    <p style="color:white; font-size:20px; text-align:center;">XTY的项目</p>
-    <ul>
-        <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
-        <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
-        <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="bilibili">XTYAI</a></li>
-        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">xdows安全</a></li>
-
-    </ul>
-    <p style="color:white; font-size:20px; text-align:center;">xdows安全</p>
-    <ul>
-        <li><a href="/Dev/xdows安全/关于软件.html" class="github">关于软件</a></li>
-        <li><a href="/Dev/xdows安全/开发人员名单.html" class="code40">开发人员名单</a></li>
-        <li><a href="/Dev/xdows安全/更新内容.html" class="bilibili">更新内容</a></li>
-        <li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">下载</a></li>
-
-    </ul>
+<div style="width: 1200px; height: 1000px; border-radius: 20px; background-color: lightblue; box-shadow: inset 0 0 20px black;">
+<h1>XTY的项目堆</h1>
+<p style="color:white; font-size:20px; text-align:center;">XTY的主页</p>
+<ul>
+<li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
+<li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
+<li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
+<li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
+</ul>
+<p style="color:white; font-size:20px; text-align:center;">XTY的项目</p>
+<ul>
+<li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
+<li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
+<li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="bilibili">XTYAI</a></li>
+<li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">xdows安全</a></li>
+</ul>
+<p style="color:white; font-size:20px; text-align:center;">xdows安全</p>
+<ul>
+<li><a href="/Dev/xdows安全/关于软件.html" class="github">关于软件</a></li>
+<li><a href="/Dev/xdows安全/开发人员名单.html" class="code40">开发人员名单</a></li>
+<li><a href="/Dev/xdows安全/更新内容.html" class="bilibili">更新内容</a></li>
+<li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">下载</a></li>
+</ul>
 </div>
-
 </body>
 </html>
