--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ border-radius: 0; /* Remove the rounded corners */
 <li><a href="/Dev/xdows安全/关于软件.html" class="github">关于软件</a></li>
 <li><a href="/Dev/xdows安全/开发人员名单.html" class="code40">开发人员名单</a></li>
 <li><a href="/Dev/xdows安全/更新内容.html" class="bilibili">更新内容</a></li>
-<li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">下载</a></li>
+<li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=LgL9znlMnq7MiZTHZLMSEc4NNP994pc_&jump_from=webapi&authKey=fsMlx48PgTWRGVPtv5TBzBRJb1+w4l+1mKUcJc23JWUuUqClv1EuSZMtl6Q1pII9" class="ccw" download>下载</a></li>
 </ul>
 </div>
 </body>
