--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ border-radius: 0; /* Remove the rounded corners */
 <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
 <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
 <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="bilibili">XTYAI</a></li>
-<li><a href="https://www.bilibili.com/video/BV1ks4y1T7Fc" class="ccw">xdows安全</a></li>
+<li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=LgL9znlMnq7MiZTHZLMSEc4NNP994pc_&jump_from=webapi&authKey=fsMlx48PgTWRGVPtv5TBzBRJb1+w4l+1mKUcJc23JWUuUqClv1EuSZMtl6Q1pII9" class="ccw">xdows安全</a></li>
 </ul>
 <p style="color:white; font-size:30px; text-align:center;">xdows安全</p>
 <ul>
