--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,3 +1,10 @@
+<h4>1.51版本</h4>
+<p>主要更新：</p>
+<p>主页显示状态</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>易语言文字显示异常（未修复）</p>
+
 <h4>1.5版本</h4>
 <p>主要更新：</p>
 <p>起始页可个性化</p>
