--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,15 +1,17 @@
 <h4>1.52版本</h4>
 <p>主要更新：</p>
 <p>杀毒、工具、设置页面更新与增加图标</p>
-<p>无法立即在主页显示状态</p>
+<p>工具UI更新</p>
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>易语言文字显示异常（未修复）</p>
+<p>无法立即在主页显示状态（已修复）</p>
 
 <h4>1.51版本</h4>
 <p>主要更新：</p>
 <p>主页显示状态</p>
 <p>托盘菜单更新</p>
+<p>设置UI更新</p>
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>易语言文字显示异常（未修复）</p>
