--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,3 +1,10 @@
+<h4>1.53版本</h4>
+<p>主要更新：</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>易语言文字显示异常（未修复）</p>
+<p>查杀结果为0时没有细致化处理（已修复）</p>
+
 <h4>1.52版本</h4>
 <p>主要更新：</p>
 <p>杀毒、工具、设置页面更新与增加图标</p>
