--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,4 +1,11 @@
-<h4>1.53版本</h4>
+<h4>1.2版本[项目重置]</h4>
+<p>主要更新：</p>
+<p>支持英文</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>在使用中文时文字显示可能会异常（未修复）</p>
+
+<h4>1.53版本[因停电所以不予发布]</h4>
 <p>主要更新：</p>
 <p>部分文字修改</p>
 <p>病毒库更新</p>
