--- a/Dev/xdows安全/开发人员名单.html
+++ b/Dev/xdows安全/开发人员名单.html
@@ -1,5 +1,5 @@
 <h3>开发人员名单</h3>
 <h4>作者</h4>
-<p>biliblili XTY64XTY</p>
+<p>biliblili XTY64XTY a1b2c3ABC1231@outlook.com</p>
 <h4>预览成员</h4>
-<p>QQ Winner 3579575125@qq.com</p>
+<p>bilibili Winner 3579575125@qq.com</p>
