--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -24,10 +24,9 @@
             </h1>
             <div class="nav">
                 <ul class="nav-ul">
+                    <li class="nav-item"><a href="./../index.html">返回</a></li>
                     <li class="nav-item"><a href="./index.html">首页</a></li>
                     <li class="nav-item"><a href="./download.html" class="active">下载</a></li>
-                    <!-- <li class="nav-item"><a href="">用户故事</a></li> -->
-                    <li class="nav-item"><a href="./support.html">支持</a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +42,7 @@
                         <div class="d-item-title">Windows版</div>
                         <div class="d-item-desc">版本2.0.0 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=LgL9znlMnq7MiZTHZLMSEc4NNP994pc_&jump_from=webapi&authKey=fsMlx48PgTWRGVPtv5TBzBRJb1+w4l+1mKUcJc23JWUuUqClv1EuSZMtl6Q1pII9" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
-                        <div class="d-item-log"><a href="https://xty64xty12345.github.io/Dev/xdows%E5%AE%89%E5%85%A8/%E6%9B%B4%E6%96%B0%E5%86%85%E5%AE%B9.html">更新日志</a></div>
+                        <div class="d-item-log"><a href="./../Dev/xdows安全/更新内容.html">更新日志</a></div>
                     </div>
                 </div>
             </div>         
