--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -42,6 +42,7 @@
             </h1>
             <div class="nav">
                 <ul class="nav-ul">
+                    <li class="nav-item"><a href="./../index.html">返回</a></li>
                     <li class="nav-item"><a href="./index.html" class="active">首页</a></li>
                     <li class="nav-item"><a href="./download.html">下载</a></li>
                 </ul>
