--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,4 +1,5 @@
-<h4>2.0版本[项目重置]</h4>
+<h5>2.0版本已发布，请立即更新</h5>
+<h4>2.0版本更新内容</h4>
 <p>主要更新：</p>
 <p>更好的UI</p>
 <p>优化高速模式</p>
@@ -6,118 +7,4 @@
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
-
-<h4>1.53版本[因停电所以不予发布]</h4>
-<p>主要更新：</p>
-<p>部分文字修改</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>查杀结果为0时没有细致化处理（已修复）</p>
-
-<h4>1.52版本</h4>
-<p>主要更新：</p>
-<p>杀毒、工具、设置页面更新与增加图标</p>
-<p>杀毒UI更新</p>
-<p>工具UI更新</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>无法立即在主页显示状态（已修复）</p>
-
-<h4>1.51版本</h4>
-<p>主要更新：</p>
-<p>主页显示状态</p>
-<p>托盘菜单更新</p>
-<p>设置UI更新</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>软件部分像素闪烁背景色（已修复）</p>
-
-<h4>1.5版本</h4>
-<p>主要更新：</p>
-<p>起始页可个性化</p>
-<p>XTY网络数据库查杀（测试）</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-
-<h4>1.43版本</h4>
-<p>主要更新：</p>
-<p>离线网页均改成在线网页</p>
-<p>首页智能助手小思可设置</p>
-<p>开发人员列表</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>异常提示没有文件目录与不存在目录提示（未修复）</p>
-
-<h4>1.42版本</h4>
-<p>主要更新：</p>
-<p>支持侧边按钮显示与隐藏</p>
-<p>高级工具页面</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-
-<h4>1.41版本</h4>
-<p>主要更新：</p>
-<p>关于界面更新</p>
-<p>错误文本更改</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>文件删除失败（已修复）</p>
-<p>在输入不存在目录时不提示（已修复）</p>
-<p>在输入没有文件目录时不提示（已修复）</p>
-<p>清除垃圾或病毒时需要多次点击（已修复）</p>
-
-<h4>1.4版本</h4>
-<p>主要更新：</p>
-<p>进程扫描可设置</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>更新内容加载失败（已修复）</p>
-<p>刷新防护没反应（已修复）</p>
-<p>在进程检查到病毒时无法清除（已修复）</p>
-
-<h4>1.3版本</h4>
-<p>主要更新：</p>
-<p>增加文件粉碎</p>
-<p>新增更新日志</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>无法删除病毒文件（已修复）</p>
-
-<h4>1.2版本</h4>
-<p>主要更新：</p>
-<p>侧边栏条改为圆角</p>
-<p>安全设置按钮更新</p>
-<p>病毒库更新</p>
-<p>增加后台进程扫描</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-
-<h4>1.1版本</h4>
-<p>主要更新：</p>
-<p>侧边栏从按钮改成图片</p>
-<p>支持使用360</p>
-<p>病毒库更新</p>
-<p>工具箱、设置界面修改</p>
-<p>bugs：</p>
-<p>安全设置打不开（已修复）</p>
-<p>查杀时有时会报错（未修复）</p>
-<p>托盘菜单打开错误（已修复）</p>
-<p>程序在某些系统中乱码（未修复）</p>
-
-<h4>1.0版本</h4>
-<p>主要更新：</p>
-<p>基础内容</p>
-<p>bugs：</p>
-<p>安全设置打不开（未修复）</p>
-<p>查杀时有时会报错（未修复）</p>
-<p>托盘菜单打开错误（未修复）</p>
-<p>程序在某些系统中乱码（未修复）</p>
+<h4>如果你不更新，将无法查看更新日志</h4>
