--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,3 +1,4 @@
+<h3>最新版本<h3>
 <h4>2.0版本[项目重置]</h4>
 <p>主要更新：</p>
 <p>更好的UI</p>
@@ -6,7 +7,8 @@
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
-
+<h3>往期版本<h3>
+  
 <h4>1.53版本[因停电所以不予发布]</h4>
 <p>主要更新：</p>
 <p>部分文字修改</p>
