--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,10 +1,13 @@
 <h3>2.0版本已发布，请立即更新</h3>
-<h4>2.0版本更新内容</h4>
-<p>主要更新：</p>
-<p>更好的UI</p>
-<p>优化高速模式</p>
-<p>支持英文</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
 <h3>如果你不更新，将无法查看更新日志</h3>
+<h3>你可以先看更新日志，再决定是否更新</h3>
+<h4>2.0版本更新内容</h4>
+<p>1、更好的UI</p>
+<p>所有界面全部重构，让软件更加一目了然</p>
+<p>2、优化高速模式</p>
+<p>只扫描常用格式，让查杀速度更快/p>
+<p>3、支持英文</p>
+<p>可以自行研发语言包，高度自定义软件文字</p>
+<p>4、病毒库更新</p>
+<p>再也不怕病毒入侵电脑</p>
+<h3>觉得马上要更新？加入Q群以获取更新！</h3>
