--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,3 +1,11 @@
+    <!-- 判断是否为IE浏览器 -->
+    <!--[if IE]>
+        <script>
+            // 使用JavaScript进行页面跳转
+            window.location.href = "./../../Dev/xdows安全/更新内容.html"; // 跳转到ie.html页面
+        </script>
+    <![endif]-->
+
 <h3>最新版本<h3>
 <h4>2.0版本[项目重置]</h4>
 <p>主要更新：</p>
