--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -11,6 +11,7 @@
     <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
+    <link rel="shortcut icon" href="./img/1-512.ico" >
     <title>xdows安全-下载</title>
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/download.css">
