--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,6 +1,17 @@
 <link rel="shortcut icon" href="./../img/1-512.ico" >
 <title>xdows安全-更新日志</title>
+
+<h3>开发中的版本<h3>
+  
+<h4>2.1版本</h4>
+<p>主要更新：</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>在使用中文时文字显示可能会异常（未修复）</p>
+<p>在侧边栏动画执行时再次单击其他图标会产生异常（已修复）</p>
+  
 <h3>最新版本<h3>
+  
 <h4>2.0版本[项目重置]</h4>
 <p>主要更新：</p>
 <p>更好的UI</p>
@@ -9,6 +20,7 @@
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
+
 <h3>往期版本<h3>
   
 <h4>1.53版本[因停电所以不予发布]</h4>
