--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -10,5 +10,6 @@
 <p>可以自行研发语言包，高度自定义软件文字</p>
 <p>4、病毒库更新</p>
 <p>再也不怕病毒入侵电脑</p>
-<h3>觉得马上要更新？</h3><a href="./../../xdows安全/download.html" target="_blank" rel="noopener noreferrer">立即更新</a>
+<h3>觉得马上要更新？</h3>
+<a href="./../../xdows安全/download.html" target="_blank" rel="noopener noreferrer">立即更新</a>
 
