--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,15 +1,19 @@
 <link rel="shortcut icon" href="./../img/1-512.ico" >
-<title>2.2</title>
+<title>2.1</title>
 
 <h3>开发中的版本<h3>
   
 <h4>2.1版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
+<p>自动检查更新</p>
+<p>[整活]微软式中文语言包</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>在侧边栏动画执行时再次单击其他图标会产生异常（已修复）</p>
-  
+<p>在软件边框右边没有覆盖选择夹（已修复）</p>
+<p>修复语言包错误（已修复）</p>
+
 <h3>最新版本<h3>
   
 <h4>2.0版本[项目重置]</h4>
