--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -40,12 +40,24 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">Windows版</div>
+                        <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">版本2.0.0 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=LgL9znlMnq7MiZTHZLMSEc4NNP994pc_&jump_from=webapi&authKey=fsMlx48PgTWRGVPtv5TBzBRJb1+w4l+1mKUcJc23JWUuUqClv1EuSZMtl6Q1pII9" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
-            </div>         
+            </div>     
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">旧版本</div>
+                        <div class="d-item-desc">1.0——1.53都将停止支持 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">为什么</a></div>
+                    </div>
+                </div>
+            </div>  
             </div>
         </div>
     </div>
