--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -11,17 +11,17 @@
     <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
-    <link rel="shortcut icon" href="./img/1-512.ico" >
+    <link rel="shortcut icon" href="./../img/1-512.ico" >
     <title>xdows安全-支持</title>
-    <link rel="stylesheet" href="./css/public.css">
-    <link rel="stylesheet" href="./css/download.css">
+    <link rel="stylesheet" href="./../css/public.css">
+    <link rel="stylesheet" href="./../css/download.css">
 </head>
 
 <body>
     <div class="header scrollTop">
         <div class="h-inner">
             <h1 class="logo">
-                <a href="./index.html"></a>
+                <a href="./../index.html"></a>
             </h1>
             <div class="nav">
                 <ul class="nav-ul">
