--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -52,7 +52,7 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">旧版本</div>
+                        <div class="d-item-title">注意事项</div>
                         <div class="d-item-desc">1.0——1.53都将停止支持 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">为什么</a></div>
                     </div>
