--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">注意事项</div>
-                        <div class="d-item-desc">1.0——1.53都将停止支持 <span class="update-time"></span></div>
+                        <div class="d-item-desc">1.0-1.53都将停止支持 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">为什么</a></div>
                     </div>
                 </div>
