--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -51,7 +51,7 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">>1.0-1.53版本</div>
+                        <div class="d-item-title">1.0-1.53版本</div>
                         <div class="d-item-desc">终止日期2023年7月28日 <span class="update-time"></span></div>
                     </div>
                 </div>
