--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -58,13 +58,16 @@
             </div>  
             </div>
         </div>
-        <h1>终止支持意味着什么</h1>
-        <h2>1、相关网页会无法访问</h2>
-        <h2>2、无法反馈问题</h2>
-        <h2>3、可能扫描服务器已经下线</h2>
-        <h1>我可以干什么</h1>
-        <h2>1、更新至新版本（推荐）</h2>
-        <h2>2、手动设置防护（不推荐）</h2>
+    </div>
+    
+    <div style="text-align: center;">
+    <h1>终止支持意味着什么</h1>
+    <h2>1、相关网页会无法访问</h2>
+    <h2>2、无法反馈问题</h2>
+    <h2>3、可能扫描服务器已经下线</h2>
+    <h1>我可以干什么</h1>
+    <h2>1、更新至新版本（推荐）</h2>
+    <h2>2、手动设置防护（不推荐）</h2>
     </div>
 
     <div class="footer d-page">
