--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -13,8 +13,8 @@
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./../img/1-512.ico" >
     <title>xdows安全-支持</title>
-    <link rel="stylesheet" href="./../css/public.css">
-    <link rel="stylesheet" href="./../css/download.css">
+    <link rel="stylesheet" href="./css/public.css">
+    <link rel="stylesheet" href="./css/download.css">
 </head>
 
 <body>
