--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -13,8 +13,8 @@
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./../img/1-512.ico" >
     <title>xdows安全-支持</title>
-    <link rel="stylesheet" href="./css/public.css">
-    <link rel="stylesheet" href="./css/download.css">
+    <link rel="stylesheet" href="./../css/public.css">
+    <link rel="stylesheet" href="./../css/download.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             </h1>
             <div class="nav">
                 <ul class="nav-ul">
-                    <li class="nav-item"><a href="./../../index.html">返回</a></li>
+                    <li class="nav-item"><a href="./../../">返回</a></li>
                     <li class="nav-item"><a href="./../index.html">首页</a></li>
                     <li class="nav-item"><a href="./../download.html" class="active">下载</a></li>
                 </ul>
