--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -25,7 +25,7 @@
             </h1>
             <div class="nav">
                 <ul class="nav-ul">
-                    <li class="nav-item"><a href="./../index.html">返回</a></li>
+                    <li class="nav-item"><a href="./../">返回</a></li>
                     <li class="nav-item"><a href="./index.html">首页</a></li>
                     <li class="nav-item"><a href="./download.html" class="active">下载</a></li>
                 </ul>
