--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -33,17 +33,18 @@
         </div>
     </div>
 <div style="text-align: center;">
+    <h1>支持</h1>
     <div class="d-item-title">2.0-2.99版本</div>
     <div class="d-item-desc">终止日期2024年7月14日<span class="update-time"></span></div>
     <div class="d-item-title">1.0-1.53版本</div>
     <div class="d-item-desc">终止日期2023年7月28日 <span class="update-time"></span></div>
-    <h1>终止支持意味着什么</h1>
-    <h2>1、相关网页会无法访问</h2>
-    <h2>2、无法反馈问题</h2>
-    <h2>3、可能扫描服务器已经下线</h2>
-    <h1>我可以干什么</h1>
-    <h2>1、更新至新版本（推荐）</h2>
-    <h2>2、手动设置防护（不推荐）</h2>
+    <div class="d-item-title">终止支持意味着什么</div>
+    <div class="d-item-desc">1、相关网页会无法访问<span class="update-time"></span></div>
+    <div class="d-item-desc">2、无法反馈问题<<span class="update-time"></span></div>
+    <div class="d-item-desc">3、可能扫描服务器已经下线<span class="update-time"></span></div>
+    <div class="d-item-title">我可以干什么</div>
+    <div class="d-item-desc">1、更新至新版本（推荐）<span class="update-time"></span></div>
+    <div class="d-item-desc">2、手动设置防护（不推荐）<span class="update-time"></span></div>
 </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
