--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -41,7 +41,7 @@
     <div class="d-item-desc">终止日期2023年7月28日 <span class="update-time"></span></div>
     <div class="d-item-title">终止支持意味着什么</div>
     <div class="d-item-desc">1、相关网页会无法访问<span class="update-time"></span></div>
-    <div class="d-item-desc">2、无法反馈问题<<span class="update-time"></span></div>
+    <div class="d-item-desc">2、无法反馈问题<span class="update-time"></span></div>
     <div class="d-item-desc">3、可能扫描服务器已经下线<span class="update-time"></span></div>
     <div class="d-item-title">我可以干什么</div>
     <div class="d-item-desc">1、更新至新版本（推荐）<span class="update-time"></span></div>
