--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -32,6 +32,11 @@
             </div>
         </div>
     </div>
+        <div class="d-content">
+        <div class="a-download clear">
+            </div>
+        </div>
+    </div>
 <div style="text-align: center;">
     <h1>支持</h1>
     <div class="d-item-title">2.0-2.99版本</div>
