--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -31,12 +31,6 @@
                 </ul>
             </div>
         </div>
-    </div>
-        <div class="d-content">
-        <div class="a-download clear">
-            </div>
-        </div>
-    </div>
 <div style="text-align: center;">
     <h1>支持</h1>
     <div class="d-item-title">2.0-2.99版本</div>
@@ -50,6 +44,7 @@
     <div class="d-item-title">我可以干什么</div>
     <div class="d-item-desc">1、更新至新版本（推荐）<span class="update-time"></span></div>
     <div class="d-item-desc">2、手动设置防护（不推荐）<span class="update-time"></span></div>
+    <div class="d-item-desc">3、使用PYAS作为杀毒软件<span class="update-time"></span></div>
 </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
