--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -44,7 +44,7 @@
     <div class="d-item-title">我可以干什么</div>
     <div class="d-item-desc">1、更新至新版本（推荐）<span class="update-time"></span></div>
     <div class="d-item-desc">2、手动设置防护（不推荐）<span class="update-time"></span></div>
-    <a href="https://pyas.cf/" target="_blank" rel="noopener noreferrer">3、使用PYAS作为杀毒软件，点击下载</a>
+    <a href="https://pyas.cf/" target="_blank" rel="noopener noreferrer"> <div class="d-item-desc">3、使用PYAS作为杀毒软件，点击下载<span class="update-time"></span></div></a>
 </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
