--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -35,16 +35,21 @@
     <h1>支持</h1>
     <div class="d-item-title">2.0-2.99版本</div>
     <div class="d-item-desc">终止日期2024年7月14日<span class="update-time"></span></div>
+    <div class="d-item-desc">还未停止支持<span class="update-time"></span></div>
     <div class="d-item-title">1.0-1.53版本</div>
-    <div class="d-item-desc">终止日期2023年7月28日 <span class="update-time"></span></div>
+    <div class="d-item-desc">终止日期2023年7月28日<span class="update-time"></span></div>
+    <div class="d-item-desc">已经停止支持<span class="update-time"></span></div>
     <div class="d-item-title">终止支持意味着什么</div>
     <div class="d-item-desc">1、相关网页会无法访问<span class="update-time"></span></div>
     <div class="d-item-desc">2、无法反馈问题<span class="update-time"></span></div>
     <div class="d-item-desc">3、可能扫描服务器已经下线<span class="update-time"></span></div>
+    <div class="d-item-desc">4、让设备更易受到攻击<span class="update-time"></span></div>
+    <div class="d-item-desc">5、问题解答服务无法使用<span class="update-time"></span></div>
+    <div class="d-item-desc">6、每一次运行软件都会弹窗提示更新<span class="update-time"></span></div>
     <div class="d-item-title">我可以干什么</div>
     <div class="d-item-desc">1、更新至新版本（推荐）<span class="update-time"></span></div>
     <div class="d-item-desc">2、手动设置防护（不推荐）<span class="update-time"></span></div>
-    <a href="https://pyas.cf/" target="_blank" rel="noopener noreferrer"> <div class="d-item-desc">3、使用PYAS作为杀毒软件，点击下载<span class="update-time"></span></div></a>
+    <a href="https://pyas.cf/" target="_blank" rel="noopener noreferrer"> <div class="d-item-desc">3、使用PYAS作为杀毒软件（如果你想），点击进入PYAS官网<span class="update-time"></span></div></a>
 </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
