--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -3,8 +3,16 @@
 
 <h3>开发中的版本<h3>
   
-<h4>2.1版本</h4>
+<h4>2.02版本</h4>
 <p>主要更新：</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>在使用中文时文字显示可能会异常（未修复）</p>
+
+<h3>最新版本<h3>
+<h4>2.01版本</h4>
+<p>主要更新：</p>
+<p>助手功能回归</p>
 <p>病毒库更新</p>
 <p>自动检查更新</p>
 <p>中文更名为简体中文</p>
@@ -15,8 +23,8 @@
 <p>在软件边框右边没有覆盖选择夹（已修复）</p>
 <p>修复语言包错误（已修复）</p>
 
-<h3>最新版本<h3>
-  
+<h3>往期版本<h3>
+
 <h4>2.0版本[项目重置]</h4>
 <p>主要更新：</p>
 <p>更好的UI</p>
@@ -26,8 +34,6 @@
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 
-<h3>往期版本<h3>
-  
 <h4>1.53版本[因停电所以不予发布]</h4>
 <p>主要更新：</p>
 <p>部分文字修改</p>
