--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -8,6 +8,7 @@
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
+<p>语言包错误（已修复）</p>
 
 <h3>最新版本<h3>
 <h4>2.01版本</h4>
@@ -23,7 +24,7 @@
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>在侧边栏动画执行时再次单击其他图标会产生异常（已修复）</p>
 <p>在软件边框右边没有覆盖选择夹（已修复）</p>
-<p>修复语言包错误（已修复）</p>
+<p>语言包错误（已修复）</p>
 
 <h3>往期版本<h3>
 
