--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -6,11 +6,15 @@
 <h4>2.02版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
+<p>托盘菜单支持深色模式</p>
+<p>托盘菜单增加设置菜单</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>语言包错误（已修复）</p>
-<p>软件在启动时就弹窗更新（已修复）</p>
-
+<p>在启动时就弹窗更新（已修复）</p>
+<p>每一次打开会保留之前的配置（已修复）</p>
+<p>杀毒在启动时没有删除之前的记录（已修复）</p>
+  
 <h3>最新版本<h3>
 <h4>2.01版本</h4>
 <p>主要更新：</p>
