--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -12,6 +12,7 @@
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>语言包错误（已修复）</p>
 <p>在启动时就弹窗更新（已修复）</p>
+<p>无法检测更新（已修复）</p>
 <p>每一次打开会保留之前的配置（已修复）</p>
 <p>杀毒在启动时没有删除之前的记录（已修复）</p>
 <p>在清理垃圾页面无法返回（已修复）</p>
