--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -16,6 +16,7 @@
 <p>每一次打开会保留之前的配置（已修复）</p>
 <p>杀毒在启动时没有删除之前的记录（已修复）</p>
 <p>在清理垃圾页面无法返回（已修复）</p>
+<p>每一次打开会保留之前的位置（已修复）</p>
   
 <h3>最新版本<h3>
 <h4>2.01版本</h4>
