--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -17,6 +17,9 @@
 <p>杀毒在启动时没有删除之前的记录（已修复）</p>
 <p>在清理垃圾页面无法返回（已修复）</p>
 <p>每一次打开会保留之前的位置（已修复）</p>
+<p>开始菜单错误（已修复）</p>
+<p>关闭后托盘图标残留（已修复）</p>
+<p>重新启动Windows文件资源管理器时托盘图标消失（已修复）</p>
   
 <h3>最新版本<h3>
 <h4>2.01版本</h4>
