--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -8,6 +8,7 @@
 <p>病毒库更新</p>
 <p>托盘菜单支持深色模式</p>
 <p>托盘菜单增加设置菜单</p>
+<p>添加文件名检测</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>语言包错误（已修复）</p>
@@ -20,7 +21,9 @@
 <p>开始菜单错误（已修复）</p>
 <p>关闭后托盘图标残留（已修复）</p>
 <p>重新启动Windows文件资源管理器时托盘图标消失（已修复）</p>
-  
+<p>在弹出不受支持弹窗时任务栏不显示（已修复）</p>
+<p>在弹出不受支持弹窗时提示内容错误（已修复）</p>
+
 <h3>最新版本<h3>
 <h4>2.01版本</h4>
 <p>主要更新：</p>
