--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,8 +1,15 @@
 <link rel="shortcut icon" href="./../img/1-512.ico" >
-<title>2.01</title>
+<title>2.02</title>
 
 <h3>开发中的版本<h3>
   
+<h4>2.03版本</h4>
+<p>主要更新：</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>在使用中文时文字显示可能会异常（未修复）</p>
+
+<h3>最新版本<h3>
 <h4>2.02版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
@@ -24,7 +31,8 @@
 <p>重新启动Windows文件资源管理器时托盘图标消失（已修复）</p>
 <p>在弹出不受支持弹窗时提示内容错误（已修复）</p>
 
-<h3>最新版本<h3>
+<h3>往期版本<h3>
+
 <h4>2.01版本</h4>
 <p>主要更新：</p>
 <p>助手功能回归</p>
@@ -39,8 +47,6 @@
 <p>在侧边栏动画执行时再次单击其他图标会产生异常（已修复）</p>
 <p>在软件边框右边没有覆盖选择夹（已修复）</p>
 <p>语言包错误（已修复）</p>
-
-<h3>往期版本<h3>
 
 <h4>2.0版本[项目重置]</h4>
 <p>主要更新：</p>
