--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -8,6 +8,8 @@
 <p>病毒库更新</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
+<p>在启动时就弹窗不支持（已修复）</p>
+<p>在启动时就弹窗文件名错误（已修复）</p>
 
 <h3>最新版本<h3>
 <h4>2.02版本</h4>
