--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -6,7 +6,8 @@
 <h4>2.03版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
-<p>杀毒界面输入框和浏览按钮持平</p>
+<p>进程管理新增搜索框</p>
+<p>杀毒界面输入框和浏览按钮大小修改</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>在启动时就弹窗不支持（已修复）</p>
