--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -15,6 +15,7 @@
 <p>在切换语言后主页状态无法立即切换（已修复）</p>
 <p>最小化时无法检测更新（已修复）</p>
 <p>打开主窗口时没有检查更新（已修复）</p>
+<p>在启动时没有删除之前的杀毒目录记录（已修复）</p>
   
 <h3>最新版本<h3>
 <h4>2.02版本</h4>
