--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -8,6 +8,7 @@
 <p>病毒库更新</p>
 <p>进程管理新增搜索框</p>
 <p>杀毒界面输入框和浏览按钮大小修改</p>
+<p>系统盘扫描改为磁盘扫描（已修复）</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>在启动时就弹窗不支持（已修复）</p>
@@ -17,6 +18,7 @@
 <p>打开主窗口时没有检查更新（已修复）</p>
 <p>在启动时没有删除之前的杀毒目录记录（已修复）</p>
 <p>在启动时没有删除之前的正在查杀记录（已修复）</p>
+<p>在杀毒时返回会导致按钮错位（已修复）</p>
   
 <h3>最新版本<h3>
 <h4>2.02版本</h4>
