--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -19,6 +19,8 @@
 <p>在启动时没有删除之前的杀毒目录记录（已修复）</p>
 <p>在启动时没有删除之前的正在查杀记录（已修复）</p>
 <p>在杀毒时返回会导致按钮错位（已修复）</p>
+<p>在杀毒时无法移动位置与按下按钮（已修复）</p>
+<p>在终止进程时刷新错误（已修复）</p>
   
 <h3>最新版本<h3>
 <h4>2.02版本</h4>
