--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -8,7 +8,8 @@
 <p>病毒库更新</p>
 <p>进程管理新增搜索框</p>
 <p>杀毒界面输入框和浏览按钮大小修改</p>
-<p>系统盘扫描改为磁盘扫描（已修复）</p>
+<p>系统盘扫描改为磁盘扫描</p>
+<p>添加参数，分别为Home、Antivirus、Tool、Settings和扫描的程序路径</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>在启动时就弹窗不支持（已修复）</p>
