--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -22,7 +22,8 @@
 <p>在杀毒时返回会导致按钮错位（已修复）</p>
 <p>在杀毒时无法移动位置与按下按钮（已修复）</p>
 <p>在终止进程时刷新错误（已修复）</p>
-  
+<p>软件打开时会重置一些内容（已修复）</p>
+ 
 <h3>最新版本<h3>
 <h4>2.02版本</h4>
 <p>主要更新：</p>
