--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -23,7 +23,8 @@
 <p>在杀毒时无法移动位置与按下按钮（已修复）</p>
 <p>在终止进程时刷新错误（已修复）</p>
 <p>软件打开时会重置一些内容（已修复）</p>
- 
+<p>在某些设备上字体为宋体（已修复）</p>
+  
 <h3>最新版本<h3>
 <h4>2.02版本</h4>
 <p>主要更新：</p>
