--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,8 +1,14 @@
 <link rel="shortcut icon" href="./../img/1-512.ico" >
-<title>2.02</title>
+<title>2.03</title>
 
 <h3>开发中的版本<h3>
-  
+ <h4>2.04版本</h4>
+<p>主要更新：</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>在使用中文时文字显示可能会异常（未修复）</p>
+
+<h3>最新版本<h3>
 <h4>2.03版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
@@ -25,8 +31,9 @@
 <p>软件打开时会重置一些内容（已修复）</p>
 <p>在未安装字体的设备上字体为宋体（已修复）</p>
 <p>有时读取配置会失败（已修复）</p>
+ 
+<h3>往期版本<h3>
   
-<h3>最新版本<h3>
 <h4>2.02版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
@@ -47,8 +54,6 @@
 <p>关闭后托盘图标残留（已修复）</p>
 <p>重新启动Windows文件资源管理器时托盘图标消失（已修复）</p>
 <p>在弹出不受支持弹窗时提示内容错误（已修复）</p>
-
-<h3>往期版本<h3>
 
 <h4>2.01版本</h4>
 <p>主要更新：</p>
