--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -5,7 +5,7 @@
 <p>1、更好的UI</p>
 <p>所有界面全部重构，让软件更加一目了然</p>
 <p>2、优化高速模式</p>
-<p>只扫描常用格式，让查杀速度更快/p>
+<p>只扫描常用格式，让查杀速度更快</p>
 <p>3、支持英文</p>
 <p>可以自行研发语言包，高度自定义软件文字</p>
 <p>4、病毒库更新</p>
