--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -7,6 +7,7 @@
 <p>病毒库更新</p>
 <p>网络库结束测试</p>
 <p>侧边条使用非线性运动</p>
+<p>最小化和关闭按钮新增提示文本</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>语言包错误（已修复）</p>
