--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -42,7 +42,7 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">版本2.0.2 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="https://qm.qq.com/cgi-bin/qm/qr?k=LgL9znlMnq7MiZTHZLMSEc4NNP994pc_&jump_from=webapi&authKey=fsMlx48PgTWRGVPtv5TBzBRJb1+w4l+1mKUcJc23JWUuUqClv1EuSZMtl6Q1pII9" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
             </div>     
