--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
 <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
 <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="bilibili">XTYAI</a></li>
-<li><a href="/xdows安全" class="ccw">xdows安全</a></li>
+<li><a href="./xdows安全" class="ccw">xdows安全</a></li>
 </ul>
 
     </div>
