--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="./../img/1-512.ico" >
+<link rel="shortcut icon" href="./../img/logo.ico" >
 <title>2.03</title>
 
 <h3>开发中的版本<h3>
