--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,5 +1,13 @@
-<link rel="shortcut icon" href="./../img/logo.ico" >
-<title>2.03</title>
+<head>
+  <link rel="shortcut icon" href="./../img/logo.ico" >
+  <title>2.03</title>
+  <style>
+  body {
+    font-family: '华康方圆体W7', sans-serif;
+  }
+  </style>
+</head>
+
 
 <h3>开发中的版本<h3>
  <h4>2.04版本</h4>
