--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -20,7 +20,7 @@
 <p>侧边按钮新增悬停效果</p>
 <p>更新日志浏览框的内核现在改为MiniBilnk内核</p>
 <p>杀毒显示已扫描文件数</p>
-<p>主防大增强</p>
+<p>主防大增强（未开放）</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>语言包错误（已修复）</p>
