--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="shortcut icon" href="./../img/logo.ico" >
-  <title>2.03</title>
+  <title>2.04</title>
   <style>
   body {
     font-family: '华康方圆体W7', sans-serif;
@@ -10,7 +10,14 @@
 
 
 <h3>开发中的版本<h3>
- <h4>2.04版本</h4>
+<h4>2.05版本</h4>
+<p>主要更新：</p>
+<p>病毒库更新</p>
+<p>bugs：</p>
+<p>在使用中文时文字显示可能会异常（未修复）</p>
+ 
+<h3>最新版本<h3>
+<h4>2.04版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
 <p>新增反馈按钮</p>
@@ -24,8 +31,9 @@
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
 <p>语言包错误（已修复）</p>
- 
-<h3>最新版本<h3>
+
+<h3>往期版本<h3>
+  
 <h4>2.03版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
@@ -49,8 +57,6 @@
 <p>在未安装字体的设备上字体为宋体（已修复）</p>
 <p>有时读取配置会失败（已修复）</p>
  
-<h3>往期版本<h3>
-  
 <h4>2.02版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
