--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -13,9 +13,11 @@
 <h4>2.05版本</h4>
 <p>主要更新：</p>
 <p>病毒库更新</p>
+<p>后台扫描多线程</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（未修复）</p>
- 
+<p>内存不足（已修复）</p>
+  
 <h3>最新版本<h3>
 <h4>2.04版本</h4>
 <p>主要更新：</p>
