--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,3 +1,15 @@
+<script>
+function checkUpdate() {
+  var txt;
+  var r = confirm("获取更新日志错误。检测到是因为版本过低，是否立即更新");
+  if (r == true) {
+  window.open("https://xty64xty12345.github.io/xdows%E5%AE%89%E5%85%A8/download.html", "_blank");
+  } else {
+    
+  }
+  document.getElementById("demo").innerHTML = txt;
+}
+</script>
 <h3>2.0版本已发布，请立即更新</h3>
 <h3>如果你不更新，将无法查看更新日志</h3>
 <h3>你可以先看更新日志，再决定是否更新</h3>
