--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -3,7 +3,7 @@ function checkUpdate() {
   var txt;
   var r = confirm("获取更新日志错误。检测到是因为版本过低，是否立即更新");
   if (r == true) {
-  window.open("https://xty64xty12345.github.io/xdows%E5%AE%89%E5%85%A8/download.html", "_blank");
+  window.open("https://xty64xty12345.github.io/xdows安全/download.html", "_blank");
   } else {
     
   }
