--- a/Dev/xdows安全/更新内容.html
+++ b/Dev/xdows安全/更新内容.html
@@ -1,3 +1,5 @@
+<button onclick="myFunction()">获取更新日志</button>
+<p id="demo"></p>
 <script>
 function myFunction(){
 	var x;
@@ -12,20 +14,3 @@ function myFunction(){
 	document.getElementById("demo").innerHTML=x;
 }
 </script>
-
-
-<h3>2.0版本已发布，请立即更新</h3>
-<h3>如果你不更新，将无法查看更新日志</h3>
-<h3>你可以先看更新日志，再决定是否更新</h3>
-<h4>2.0版本更新内容</h4>
-<p>1、更好的UI</p>
-<p>所有界面全部重构，让软件更加一目了然</p>
-<p>2、优化高速模式</p>
-<p>只扫描常用格式，让查杀速度更快</p>
-<p>3、支持英文</p>
-<p>可以自行研发语言包，高度自定义软件文字</p>
-<p>4、病毒库更新</p>
-<p>再也不怕病毒入侵电脑</p>
-<h3>觉得马上要更新？</h3>
-<a href="./../../xdows安全/download.html" target="_blank" rel="noopener noreferrer">立即更新</a>
-
