--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -19,7 +19,7 @@
 <p>修改UI布局</p>
 <p>升级信息框模块</p>
 <p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
+<p>在使用中文时文字显示可能会异常（修复一半）</p>
 <p>内存不足（已修复）</p>
   
 <h3>最新版本<h3>
