--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -20,7 +20,7 @@
 <p>升级信息框模块</p>
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（修复一半）</p>
-<p>内存不足（已修复）</p>
+<p>分配XXX字节内存失败（已修复）</p>
 <p>其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 发现的Bug）</p>
   
 <h3>最新版本<h3>
