--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -21,7 +21,7 @@
 <p>bugs：</p>
 <p>在使用中文时文字显示可能会异常（修复一半）</p>
 <p>分配XXX字节内存失败（已修复）</p>
-<p>其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 发现的Bug）</p>
+<p>其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</p>
   
 <h3>最新版本<h3>
 <h4>2.04版本</h4>
