--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -1,64 +1,75 @@
 <head>
-  <link rel="shortcut icon" href="./../img/logo.ico" >
+  <link rel="shortcut icon" href="./../img/logo.ico">
   <title>2.04</title>
   <style>
-  body {
-    font-family: '华康方圆体W7', sans-serif;
-  }
+    body {
+      font-family: '华康方圆体W7', sans-serif;
+    }
   </style>
 </head>
 
-
-<h3>开发中的版本<h3>
+<h3>开发中的版本</h3>
 <h4>2.05版本</h4>
 <p>主要更新：</p>
-<p>病毒库更新</p>
-<p>后台扫描多线程</p>
-<p>部分组件支持unicode</p>
-<p>公用桌面后台扫描</p>
-<p>修改UI布局</p>
-<p>升级信息框模块</p>
+<ul>
+  <li>病毒库更新</li>
+  <li>后台扫描多线程</li>
+  <li>部分组件支持unicode</li>
+  <li>公用桌面后台扫描</li>
+  <li>修改UI布局</li>
+  <li>升级信息框模块</li>
+</ul>
 <p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（修复一半）</p>
-<p>分配XXX字节内存失败（已修复）</p>
-<p>[紧急]病毒文件无法删除（已修复）</p>
-<p>多次显示同一个文件（已修复）</p>
-<p>其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</p>
-  
-<h3>最新版本<h3>
+<ul>
+  <li>在使用中文时文字显示可能会异常（修复一半）</li>
+  <li>分配XXX字节内存失败（已修复）</li>
+  <li>[紧急]病毒文件无法删除（已修复）</li>
+  <li>多次显示同一个文件（已修复）</li>
+  <li>其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</li>
+</ul>
+
+<h3>最新版本</h3>
 <h4>2.04版本</h4>
 <p>主要更新：</p>
-<p>病毒库更新</p>
-<p>新增反馈按钮</p>
-<p>网络库结束测试</p>
-<p>侧边条使用非线性运动</p>
-<p>最小化和关闭按钮新增悬停提示文本</p>
-<p>侧边按钮新增悬停效果</p>
-<p>更新日志浏览框的内核现在改为MiniBilnk内核</p>
-<p>杀毒显示已扫描文件数</p>
-<p>主防大增强</p>
+<ul>
+  <li>病毒库更新</li>
+  <li>新增反馈按钮</li>
+  <li>网络库结束测试</li>
+  <li>侧边条使用非线性运动</li>
+  <li>最小化和关闭按钮新增悬停提示文本</li>
+  <li>侧边按钮新增悬停效果</li>
+  <li>更新日志浏览框的内核现在改为MiniBilnk内核</li>
+  <li>杀毒显示已扫描文件数</li>
+  <li>主防大增强</li>
+</ul>
 <p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
-<p>语言包错误（已修复）</p>
+<ul>
+  <li>在使用中文时文字显示可能会异常（未修复）</li>
+  <li>语言包错误（已修复）</li>
+</ul>
 
-<h3>往期版本<h3>
-  
+<h3>往期版本</h3>
+
 <h4>2.03版本</h4>
 <p>主要更新：</p>
-<p>病毒库更新</p>
-<p>进程管理新增搜索框</p>
-<p>杀毒界面输入框和浏览按钮大小修改</p>
-<p>系统盘扫描改为磁盘扫描</p>
-<p>添加参数，分别为Home、Antivirus、Tool、Settings和扫描的程序路径</p>
+<ul>
+  <li>病毒库更新</li>
+  <li>进程管理新增搜索框</li>
+  <li>杀毒界面输入框和浏览按钮大小修改</li>
+  <li>系统盘扫描改为磁盘扫描</li>
+  <li>添加参数，分别为Home、Antivirus、Tool、Settings和扫描的程序路径</li>
+</ul>
 <p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
-<p>在启动时就弹窗不支持（已修复）</p>
-<p>在启动时就弹窗文件名错误（已修复）</p>
-<p>在切换语言后主页状态无法立即切换（已修复）</p>
-<p>最小化时无法检测更新（已修复）</p>
-<p>打开主窗口时没有检查更新（已修复）</p>
-<p>在启动时没有删除之前的杀毒目录记录（已修复）</p>
-<p>在启动时没有删除之前的正在查杀记录（已修复）</p>
+<ul>
+  <li>在使用中文时文字显示可能会异常（未修复）</li>
+  <li>在启动时就弹窗不支持（已修复）</li>
+  <li>在启动时就弹窗文件名错误（已修复）</li>
+  <li>在切换语言后主页状态无法立即切换（已修复）</li>
+  <li>最小化时无法检测更新（已修复）</li>
+  <li>打开主窗口时没有检查更新（已修复）</li>
+  <li>在启动时没有删除之前的杀毒目录记录（已修复）</li>
+  <li>在启动时没有删除之前的正在查杀记录（已修复）</li>
+</ul>
 <p>在杀毒时返回会导致按钮错位（已修复）</p>
 <p>在杀毒时无法移动位置与按下按钮（已修复）</p>
 <p>在终止进程时刷新错误（已修复）</p>
