--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -10,7 +10,7 @@
 
 <h3>开发中的版本</h3>
 <h4>2.05版本</h4>
-<p>主要更新：</p>
+  <li>主要更新：</li>
 <ul>
   <li>病毒库更新</li>
   <li>后台扫描多线程</li>
@@ -19,7 +19,7 @@
   <li>修改UI布局</li>
   <li>升级信息框模块</li>
 </ul>
-<p>bugs：</p>
+  <li>bugs：</li>
 <ul>
   <li>在使用中文时文字显示可能会异常（修复一半）</li>
   <li>分配XXX字节内存失败（已修复）</li>
@@ -30,7 +30,7 @@
 
 <h3>最新版本</h3>
 <h4>2.04版本</h4>
-<p>主要更新：</p>
+  <li>主要更新：</li>
 <ul>
   <li>病毒库更新</li>
   <li>新增反馈按钮</li>
@@ -42,7 +42,7 @@
   <li>杀毒显示已扫描文件数</li>
   <li>主防大增强</li>
 </ul>
-<p>bugs：</p>
+  <li>bugs：</li>
 <ul>
   <li>在使用中文时文字显示可能会异常（未修复）</li>
   <li>语言包错误（已修复）</li>
@@ -51,7 +51,7 @@
 <h3>往期版本</h3>
 
 <h4>2.03版本</h4>
-<p>主要更新：</p>
+  <li>主要更新：</li>
 <ul>
   <li>病毒库更新</li>
   <li>进程管理新增搜索框</li>
@@ -59,7 +59,7 @@
   <li>系统盘扫描改为磁盘扫描</li>
   <li>添加参数，分别为Home、Antivirus、Tool、Settings和扫描的程序路径</li>
 </ul>
-<p>bugs：</p>
+  <li>bugs：</li>
 <ul>
   <li>在使用中文时文字显示可能会异常（未修复）</li>
   <li>在启动时就弹窗不支持（已修复）</li>
@@ -69,170 +69,179 @@
   <li>打开主窗口时没有检查更新（已修复）</li>
   <li>在启动时没有删除之前的杀毒目录记录（已修复）</li>
   <li>在启动时没有删除之前的正在查杀记录（已修复）</li>
+  <li>在杀毒时返回会导致按钮错位（已修复）</li>
+  <li>在杀毒时无法移动位置与按下按钮（已修复）</li>
+  <li>在终止进程时刷新错误（已修复）</li>
+  <li>软件打开时会重置一些内容（已修复）</li>
+  <li>在未安装字体的设备上字体为宋体（已修复）</li>
+  <li>有时读取配置会失败（已修复）</li>
 </ul>
-<p>在杀毒时返回会导致按钮错位（已修复）</p>
-<p>在杀毒时无法移动位置与按下按钮（已修复）</p>
-<p>在终止进程时刷新错误（已修复）</p>
-<p>软件打开时会重置一些内容（已修复）</p>
-<p>在未安装字体的设备上字体为宋体（已修复）</p>
-<p>有时读取配置会失败（已修复）</p>
- 
+
 <h4>2.02版本</h4>
 <p>主要更新：</p>
-<p>病毒库更新</p>
-<p>托盘菜单支持深色模式</p>
-<p>托盘菜单增加设置菜单</p>
-<p>托盘图标更新</p>
-<p>添加文件名检测</p>
+<ul>
+  <li>病毒库更新</li>
+  <li>托盘菜单支持深色模式</li>
+  <li>托盘菜单增加设置菜单</li>
+  <li>托盘图标更新</li>
+  <li>添加文件名检测</li>
+</ul>
 <p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
-<p>语言包错误（已修复）</p>
-<p>在启动时就弹窗更新（已修复）</p>
-<p>无法检测更新（已修复）</p>
-<p>每一次打开会保留之前的配置（已修复）</p>
-<p>杀毒在启动时没有删除之前的记录（已修复）</p>
-<p>在清理垃圾页面无法返回（已修复）</p>
-<p>每一次打开会保留之前的位置（已修复）</p>
-<p>开始菜单错误（已修复）</p>
-<p>关闭后托盘图标残留（已修复）</p>
-<p>重新启动Windows文件资源管理器时托盘图标消失（已修复）</p>
-<p>在弹出不受支持弹窗时提示内容错误（已修复）</p>
-
+<ul>
+  <li>在使用中文时文字显示可能会异常（未修复）</li>
+  <li>语言包错误（已修复）</li>
+  <li>在启动时就弹窗更新（已修复）</li>
+  <li>无法检测更新（已修复）</li>
+  <li>每一次打开会保留之前的配置（已修复）</li>
+  <li>杀毒在启动时没有删除之前的记录（已修复）</li>
+  <li>在清理垃圾页面无法返回（已修复）</li>
+  <li>每一次打开会保留之前的位置（已修复）</li>
+  <li>开始菜单错误（已修复）</li>
+  <li>关闭后托盘图标残留（已修复）</li>
+  <li>重新启动Windows文件资源管理器时托盘图标消失（已修复）</li>
+  <li>在弹出不受支持弹窗时提示内容错误（已修复）</li>
+</ul>
 <h4>2.01版本</h4>
 <p>主要更新：</p>
-<p>助手功能回归</p>
-<p>主程序签名</p>
-<p>托盘菜单</p>
-<p>病毒库更新</p>
-<p>自动检查更新</p>
-<p>中文更名为简体中文</p>
-<p>[整活]微软式中文语言包</p>
+<ul>
+  <li>助手功能回归</li>
+  <li>主程序签名</li>
+  <li>托盘菜单</li>
+  <li>病毒库更新</li>
+  <li>自动检查更新</li>
+  <li>中文更名为简体中文</li>
+  <li>[整活]微软式中文语言包</li>
+</ul>
 <p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
-<p>在侧边栏动画执行时再次单击其他图标会产生异常（已修复）</p>
-<p>在软件边框右边没有覆盖选择夹（已修复）</p>
-<p>语言包错误（已修复）</p>
-
+<ul>
+  <li>在使用中文时文字显示可能会异常（未修复）</li>
+  <li>在侧边栏动画执行时再次单击其他图标会产生异常（已修复）</li>
+  <li>在软件边框右边没有覆盖选择夹（已修复）</li>
+  <li>语言包错误（已修复）</li>
+</ul>
 <h4>2.0版本[项目重置]</h4>
-<p>主要更新：</p>
-<p>更好的UI</p>
-<p>优化高速模式</p>
-<p>支持英文</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>在使用中文时文字显示可能会异常（未修复）</p>
+  <li>主要更新：</li>
+  <li>更好的UI</li>
+  <li>优化高速模式</li>
+  <li>支持英文</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>在使用中文时文字显示可能会异常（未修复）</li>
 
 <h4>1.53版本[因停电所以不予发布]</h4>
-<p>主要更新：</p>
-<p>部分文字修改</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>查杀结果为0时没有细致化处理（已修复）</p>
+  <li>主要更新：</li>
+  <li>部分文字修改</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>查杀结果为0时没有细致化处理（已修复）</li>
 
 <h4>1.52版本</h4>
 <p>主要更新：</p>
-<p>杀毒、工具、设置页面更新与增加图标</p>
-<p>杀毒UI更新</p>
-<p>工具UI更新</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>无法立即在主页显示状态（已修复）</p>
-
+<ul>
+  <li>杀毒、工具、设置页面更新与增加图标</li>
+  <li>杀毒UI更新</li>
+  <li>工具UI更新</li>
+  <li>病毒库更新</li>
+</ul>
+  <li>bugs：</li>
+<ul>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>无法立即在主页显示状态（已修复）</li>
+</ul>
 <h4>1.51版本</h4>
-<p>主要更新：</p>
-<p>主页显示状态</p>
-<p>托盘菜单更新</p>
-<p>设置UI更新</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>软件部分像素闪烁背景色（已修复）</p>
+  <li>主要更新：</li>
+  <li>主页显示状态</li>
+  <li>托盘菜单更新</li>
+  <li>设置UI更新</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>软件部分像素闪烁背景色（已修复）</li>
 
 <h4>1.5版本</h4>
-<p>主要更新：</p>
-<p>起始页可个性化</p>
-<p>XTY网络数据库查杀（测试）</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
+  <li>主要更新：</li>
+  <li>起始页可个性化</li>
+  <li>XTY网络数据库查杀（测试）</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
 
 <h4>1.43版本</h4>
-<p>主要更新：</p>
-<p>离线网页均改成在线网页</p>
-<p>首页智能助手小思可设置</p>
-<p>开发人员列表</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>异常提示没有文件目录与不存在目录提示（未修复）</p>
+  <li>主要更新：</li>
+  <li>离线网页均改成在线网页</li>
+  <li>首页智能助手小思可设置</li>
+  <li>开发人员列表</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>异常提示没有文件目录与不存在目录提示（未修复）</li>
 
 <h4>1.42版本</h4>
-<p>主要更新：</p>
-<p>支持侧边按钮显示与隐藏</p>
-<p>高级工具页面</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
+  <li>主要更新：</li>
+  <li>支持侧边按钮显示与隐藏</li>
+  <li>高级工具页面</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
 
 <h4>1.41版本</h4>
-<p>主要更新：</p>
-<p>关于界面更新</p>
-<p>错误文本更改</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>文件删除失败（已修复）</p>
-<p>在输入不存在目录时不提示（已修复）</p>
-<p>在输入没有文件目录时不提示（已修复）</p>
-<p>清除垃圾或病毒时需要多次点击（已修复）</p>
+  <li>主要更新：</li>
+  <li>关于界面更新</li>
+  <li>错误文本更改</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>文件删除失败（已修复）</li>
+  <li>在输入不存在目录时不提示（已修复）</li>
+  <li>在输入没有文件目录时不提示（已修复）</li>
+  <li>清除垃圾或病毒时需要多次点击（已修复）</li>
 
 <h4>1.4版本</h4>
-<p>主要更新：</p>
-<p>进程扫描可设置</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>更新内容加载失败（已修复）</p>
-<p>刷新防护没反应（已修复）</p>
-<p>在进程检查到病毒时无法清除（已修复）</p>
+  <li>主要更新：</li>
+  <li>进程扫描可设置</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>更新内容加载失败（已修复）</li>
+  <li>刷新防护没反应（已修复）</li>
+  <li>在进程检查到病毒时无法清除（已修复）</li>
 
 <h4>1.3版本</h4>
-<p>主要更新：</p>
-<p>增加文件粉碎</p>
-<p>新增更新日志</p>
-<p>病毒库更新</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
-<p>无法删除病毒文件（已修复）</p>
+  <li>主要更新：</li>
+  <li>增加文件粉碎</li>
+  <li>新增更新日志</li>
+  <li>病毒库更新</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
+  <li>无法删除病毒文件（已修复）</li>
 
 <h4>1.2版本</h4>
-<p>主要更新：</p>
-<p>侧边栏条改为圆角</p>
-<p>安全设置按钮更新</p>
-<p>病毒库更新</p>
-<p>增加后台进程扫描</p>
-<p>bugs：</p>
-<p>易语言文字显示异常（未修复）</p>
+  <li>主要更新：</li>
+  <li>侧边栏条改为圆角</li>
+  <li>安全设置按钮更新</li>
+  <li>病毒库更新</li>
+  <li>增加后台进程扫描</li>
+  <li>bugs：</li>
+  <li>易语言文字显示异常（未修复）</li>
 
 <h4>1.1版本</h4>
-<p>主要更新：</p>
-<p>侧边栏从按钮改成图片</p>
-<p>支持使用360</p>
-<p>病毒库更新</p>
-<p>工具箱、设置界面修改</p>
-<p>bugs：</p>
-<p>安全设置打不开（已修复）</p>
-<p>查杀时有时会报错（未修复）</p>
-<p>托盘菜单打开错误（已修复）</p>
-<p>程序在某些系统中乱码（未修复）</p>
+  <li>主要更新：</li>
+  <li>侧边栏从按钮改成图片</li>
+  <li>支持使用360</li>
+  <li>病毒库更新</li>
+  <li>工具箱、设置界面修改</li>
+  <li>bugs：</li>
+  <li>安全设置打不开（已修复）</li>
+  <li>查杀时有时会报错（未修复）</li>
+  <li>托盘菜单打开错误（已修复）</li>
+  <li>程序在某些系统中乱码（未修复）</li>
 
 <h4>1.0版本</h4>
-<p>主要更新：</p>
-<p>基础内容</p>
-<p>bugs：</p>
-<p>安全设置打不开（未修复）</p>
-<p>查杀时有时会报错（未修复）</p>
-<p>托盘菜单打开错误（未修复）</p>
-<p>程序在某些系统中乱码（未修复）</p>
+  <li>主要更新：</li>
+  <li>基础内容</li>
+  <li>bugs：</li>
+  <li>安全设置打不开（未修复）</li>
+  <li>查杀时有时会报错（未修复）</li>
+  <li>托盘菜单打开错误（未修复）</li>
+  <li>程序在某些系统中乱码（未修复）</li>
