--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -10,7 +10,7 @@
 
 <h3>开发中的版本</h3>
 <h4>2.05版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
 <ul>
   <li>病毒库更新</li>
   <li>后台扫描多线程</li>
@@ -19,7 +19,7 @@
   <li>修改UI布局</li>
   <li>升级信息框模块</li>
 </ul>
-  <li>bugs：</li>
+<p>bugs：</p>
 <ul>
   <li>在使用中文时文字显示可能会异常（修复一半）</li>
   <li>分配XXX字节内存失败（已修复）</li>
@@ -30,7 +30,7 @@
 
 <h3>最新版本</h3>
 <h4>2.04版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
 <ul>
   <li>病毒库更新</li>
   <li>新增反馈按钮</li>
@@ -42,7 +42,7 @@
   <li>杀毒显示已扫描文件数</li>
   <li>主防大增强</li>
 </ul>
-  <li>bugs：</li>
+<p>bugs：</p>
 <ul>
   <li>在使用中文时文字显示可能会异常（未修复）</li>
   <li>语言包错误（已修复）</li>
@@ -51,7 +51,7 @@
 <h3>往期版本</h3>
 
 <h4>2.03版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
 <ul>
   <li>病毒库更新</li>
   <li>进程管理新增搜索框</li>
@@ -59,7 +59,7 @@
   <li>系统盘扫描改为磁盘扫描</li>
   <li>添加参数，分别为Home、Antivirus、Tool、Settings和扫描的程序路径</li>
 </ul>
-  <li>bugs：</li>
+<p>bugs：</p>
 <ul>
   <li>在使用中文时文字显示可能会异常（未修复）</li>
   <li>在启动时就弹窗不支持（已修复）</li>
@@ -101,6 +101,7 @@
   <li>重新启动Windows文件资源管理器时托盘图标消失（已修复）</li>
   <li>在弹出不受支持弹窗时提示内容错误（已修复）</li>
 </ul>
+
 <h4>2.01版本</h4>
 <p>主要更新：</p>
 <ul>
@@ -119,22 +120,31 @@
   <li>在软件边框右边没有覆盖选择夹（已修复）</li>
   <li>语言包错误（已修复）</li>
 </ul>
+
 <h4>2.0版本[项目重置]</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>更好的UI</li>
   <li>优化高速模式</li>
   <li>支持英文</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>在使用中文时文字显示可能会异常（未修复）</li>
+</ul>
 
 <h4>1.53版本[因停电所以不予发布]</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>部分文字修改</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>查杀结果为0时没有细致化处理（已修复）</li>
+</ul>
 
 <h4>1.52版本</h4>
 <p>主要更新：</p>
@@ -144,104 +154,144 @@
   <li>工具UI更新</li>
   <li>病毒库更新</li>
 </ul>
-  <li>bugs：</li>
+<p>bugs：</p>
 <ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>无法立即在主页显示状态（已修复）</li>
 </ul>
+
 <h4>1.51版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>主页显示状态</li>
   <li>托盘菜单更新</li>
   <li>设置UI更新</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>软件部分像素闪烁背景色（已修复）</li>
+</ul>
 
 <h4>1.5版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>起始页可个性化</li>
   <li>XTY网络数据库查杀（测试）</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
+</ul>
 
 <h4>1.43版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>离线网页均改成在线网页</li>
   <li>首页智能助手小思可设置</li>
   <li>开发人员列表</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>异常提示没有文件目录与不存在目录提示（未修复）</li>
+</ul>
 
 <h4>1.42版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>支持侧边按钮显示与隐藏</li>
   <li>高级工具页面</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
   <li>易语言文字显示异常（未修复）</li>
+</ul>
 
 <h4>1.41版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>关于界面更新</li>
   <li>错误文本更改</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>文件删除失败（已修复）</li>
   <li>在输入不存在目录时不提示（已修复）</li>
   <li>在输入没有文件目录时不提示（已修复）</li>
   <li>清除垃圾或病毒时需要多次点击（已修复）</li>
+</ul>
 
 <h4>1.4版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>进程扫描可设置</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>更新内容加载失败（已修复）</li>
   <li>刷新防护没反应（已修复）</li>
   <li>在进程检查到病毒时无法清除（已修复）</li>
+</ul>
 
 <h4>1.3版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>增加文件粉碎</li>
   <li>新增更新日志</li>
   <li>病毒库更新</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
   <li>无法删除病毒文件（已修复）</li>
+</ul>
 
 <h4>1.2版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>侧边栏条改为圆角</li>
   <li>安全设置按钮更新</li>
   <li>病毒库更新</li>
   <li>增加后台进程扫描</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>易语言文字显示异常（未修复）</li>
+</ul>
 
 <h4>1.1版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>侧边栏从按钮改成图片</li>
   <li>支持使用360</li>
   <li>病毒库更新</li>
   <li>工具箱、设置界面修改</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>安全设置打不开（已修复）</li>
   <li>查杀时有时会报错（未修复）</li>
   <li>托盘菜单打开错误（已修复）</li>
   <li>程序在某些系统中乱码（未修复）</li>
+</ul>
 
 <h4>1.0版本</h4>
-  <li>主要更新：</li>
+<p>主要更新：</p>
+<ul>
   <li>基础内容</li>
-  <li>bugs：</li>
+</ul>
+<p>bugs：</p>
+<ul>
   <li>安全设置打不开（未修复）</li>
   <li>查杀时有时会报错（未修复）</li>
   <li>托盘菜单打开错误（未修复）</li>
   <li>程序在某些系统中乱码（未修复）</li>
+</ul>
