--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -4,22 +4,18 @@
   <style>
     body {
       font-family: '华康方圆体W7', sans-serif;
-      background-color: #f0f0f0; /* 添加背景颜色 */
+      background-color: #666666; /* 添加背景颜色 */
     }
     h3 {
-      color: #333333; /* 添加标题颜色 */
       margin-top: 20px; /* 添加标题上边距 */
     }
     h4 {
-      color: #666666; /* 添加副标题颜色 */
       margin-bottom: 10px; /* 添加副标题下边距 */
     }
     p {
-      color: #999999; /* 添加段落颜色 */
       margin-left: 20px; /* 添加段落左边距 */
     }
     ul {
-      color: #999999; /* 添加列表颜色 */
       margin-left: 40px; /* 添加列表左边距 */
     }
     li {
