--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -7,18 +7,23 @@
       background-color: #666666; /* 添加背景颜色 */
     }
     h3 {
+      color: #ffffff; /* 添加颜色 */
       margin-top: 20px; /* 添加标题上边距 */
     }
     h4 {
+      color: #ffffff; /* 添加颜色 */
       margin-bottom: 10px; /* 添加副标题下边距 */
     }
     p {
+      color: #ffffff; /* 添加颜色 */
       margin-left: 20px; /* 添加段落左边距 */
     }
     ul {
+      color: #ffffff; /* 添加颜色 */
       margin-left: 40px; /* 添加列表左边距 */
     }
     li {
+      color: #ffffff; /* 添加颜色 */
       margin-bottom: 5px; /* 添加列表项下边距 */
     }
   </style>
