--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -4,7 +4,7 @@
 <head>
     <title>2.04</title>
     <link rel="stylesheet" href="./../css/public.css">
-    <link rel="stylesheet" href="./css/Update.css">
+    <link rel="stylesheet" href="./../css/support.css">
 </head>
 
 <body>
