--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -28,9 +28,15 @@
                     <div class="newfunc-list">语言包错误（已修复）</div>
                 </div>
             </div>
-            <div class="version-item newest">
-                <div class="newversion">正在开发... 2.05</div>
-                <div class="newfunc">
+            <div class="history-version">
+                <div class="history-version-title">其它版本</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.05版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.05</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">选中按钮也会有悬停效果</div>
                     <div class="newfunc-list">后台扫描多线程</div>
@@ -44,10 +50,8 @@
                     <div class="newfunc-list">[紧急]病毒文件无法删除（已修复）</div>
                     <div class="newfunc-list">多次显示同一个文件（已修复）</div>
                     <div class="newfunc-list">其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</div>
+                    </div>
                 </div>
-            </div>
-            <div class="history-version">
-                <div class="history-version-title">历史版本</div>
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
