--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>2.04</title>
+    <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
 </head>
